# python-kadmin

./: .envrc  .gitignore  .gitlab-ci.yml  Makefile  README.md  build.py  pyproject.toml  shell.nix
.github/workflows/: main.yml
kadmin/: PyKAdminCommon.c  PyKAdminCommon.h  PyKAdminXDR.c  PyKAdminXDR.h  getdate.c  kadmin.c
python_kadmin_epita/: __init__.py  getdate.c  kadmin.c
src/: PyKAdminIterator.h  PyKAdminObject.h  PyKAdminPolicyObject.h  PyKAdminPrincipalObject.h  getdate.c
test/: bootstrap_kdb.py  purge_kdb.py  tests.py  unittests.py
