[tool.poetry]
name = "python-kadmin-epita"
version = "0.1.2"
description = "Python module for kerberos admin (kadm5)"
license = "MIT"
authors = ["Russell Jancewicz <russell.jancewicz@gmail.com>"]
repository="https://gitlab.cri.epita.fr/cri/packages/python-kadmin-epita"
readme = "README.md"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: YACC",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
