[tool.poetry]
name = "python-kadmin"
version = "0.1.2"
description = "Python module for kerberos admin (kadm5)"
license = "MIT"
authors = ["Russell Jancewicz <russell.jancewicz@gmail.com>"]
repository="https://gitlab.cri.epita.fr/cri/packages/python-kadmin-epita"
readme = "README.md"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: YACC",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]

packages = []
include = [
    { path = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
# See https://github.com/pythongssapi/k5test/pull/27
k5test = { git = "https://github.com/rissson/k5test.git", branch = "fix-start-kadmin" }
pytest = "*"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
